# bazel-hermetic-python

./: BUILD.bazel  LICENSE  README.md  WORKSPACE  helloworld.py  openssl.BUILD  python.BUILD  requirements.txt
