load("@pip_parsed_deps//:requirements.bzl", "requirement")
load("@bazel_tools//tools/python:toolchain.bzl", "py_runtime_pair")
package(default_visibility = ["//visibility:public"])


py_runtime(
    name = "py3_runtime",
    files = ["@python3_interpreter//:python3"],
    interpreter = "@python3_interpreter//:python3_bin",
    python_version = "PY3",
)

py_runtime_pair(
    name = "py_runtime_pair",
    py2_runtime = None,
    py3_runtime = ":py3_runtime",
)

toolchain(
    name = "my_py_toolchain",
    toolchain = ":py_runtime_pair",
    toolchain_type = "@bazel_tools//tools/python:toolchain_type",
)


py_binary(
    name = "helloworld",
    srcs = ["helloworld.py"],
    deps = [
         requirement("requests"),
    ],
)